<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    tools:context="com.example.feature_login.ui.LoginFragment">


    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/logo_home"
        android:layout_width="188dp"
        android:layout_height="48dp"
        android:layout_marginLeft="112dp"
        android:layout_marginTop="64dp"
        android:layout_marginRight="112dp"
        android:src="@drawable/logo_home"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/txt_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="48dp"
        android:autoSizeMinTextSize="8sp"
        android:autoSizeTextType="uniform"
        android:gravity="center"
        android:text="@string/text_title"
        android:textColor="@color/charcoalGrey"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/logo_home" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/txt_subtitle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="48dp"
        android:layout_marginTop="16dp"
        android:layout_marginRight="48dp"
        android:autoSizeMinTextSize="8sp"
        android:autoSizeTextType="uniform"
        android:gravity="center"
        android:text="@string/text_subtitle"
        android:textColor="@color/charcoalGrey"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/txt_title" />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/edtEmail"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="96dp"
        android:drawableStart="@drawable/ic_email"
        android:drawablePadding="8dp"
        android:textColorHint="@color/charcoalGreyTransparent"
        android:hint="@string/text_hint_email"
        android:inputType="textEmailAddress"
        android:textColor="@color/charcoalGrey"
        app:layout_constraintEnd_toEndOf="@id/txt_subtitle"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="@id/txt_subtitle"
        app:layout_constraintTop_toBottomOf="@id/txt_subtitle" />
    

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/layoutEdtPassword"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        app:layout_constraintTop_toBottomOf="@id/edtEmail"
        app:layout_constraintEnd_toEndOf="@id/edtEmail"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="@id/edtEmail"
        app:passwordToggleEnabled="true">
        
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edtPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableStart="@drawable/ic_cadeado"
            android:drawablePadding="8dp"
            android:gravity="center_vertical"
            android:textColorHint="@color/charcoalGreyTransparent"
            android:hint="@string/text_hint_password"
            android:inputType="textPassword"
            android:singleLine="true"
            android:textColor="@color/charcoalGrey"
            android:drawableEnd="@drawable/ic_baseline_remove_red_eye_24">

        </com.google.android.material.textfield.TextInputEditText>

    </com.google.android.material.textfield.TextInputLayout>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnLogin"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:background="@drawable/background_button"
        android:text="@string/text_btnLogin"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@id/layoutEdtPassword"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@id/layoutEdtPassword"
        app:layout_constraintTop_toBottomOf="@id/layoutEdtPassword"
        app:layout_constraintVertical_bias="0.05" />

    <View
        android:id="@+id/viewLoading"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="gone"
        android:background="@color/whiteTransparent"/>

    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"/>

    <androidx.constraintlayout.widget.Group
        android:id="@+id/loadingGroup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:constraint_referenced_ids="viewLoading,progressBar" />

</androidx.constraintlayout.widget.ConstraintLayout>